# serverless/workspace-api/gateway.openapi.yaml
@@ -193,6 +193,18 @@ paths:
       responses:
         '200':
           description: Current team and defaults
+  /team-members:
+    get:
+      operationId: teamMembers
+      x-yc-apigateway-integration:
+        type: cloud_functions
+        function_id: ${function_id}
+        tag: ${function_tag}
+        service_account_id: ${gateway_service_account_id}
+        payload_format_version: '2.0'
+      responses:
+        '200':
+          description: Current team members
   /team-defaults:
     get:
       operationId: getTeamDefaults
